--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       style="border-radius: 20%"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instituto Sina Azul</title>
+    <title>Instituto Sinal Azul</title>
   </head>
   <body>
     <div id="root"></div>
